# image-send-app

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme.md  test-results.xml
apps/chat/: admin.py  apps.py  forms.py  image_api.py  models.py  signals.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_alter_message_options_image_external_id.py  0003_alter_message_options_alter_chat_messages_and_more.py
apps/chat/templates/chat/: send_banner_message.html
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
pure/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_get_image.py  test_signals.py  test_views.py
